syntax = "proto3";
import "revision.proto";

message CreateDocParams {
    string id = 1;
    RepeatedRevision revisions = 2;
}
message Doc {
    string id = 1;
    string text = 2;
    int64 rev_id = 3;
    int64 base_rev_id = 4;
}
message ResetDocumentParams {
    string doc_id = 1;
    RepeatedRevision revisions = 2;
}
message DocDelta {
    string doc_id = 1;
    string data = 2;
}
message NewDocUser {
    string user_id = 1;
    int64 rev_id = 2;
    string doc_id = 3;
}
message DocIdentifier {
    string doc_id = 1;
}
